# C_Pointer_review

DynamicMemory/: MemMalFree.cpp  NewObject.cpp  Ref.cpp  StrucTest.cpp
class/: CMakeLists.txt
class/Calculator/: Cal.cpp  Calculator.h
class/FruitSale/: FruitSaleSim1.cpp
class/Printer/: Printer.h  PrinterMain.cpp
class/Rectangle/: Point.cpp  Point.h  ReactangleFault.cpp  Rectangle.cpp  Rectangle.h  RectangleFaultFind.cpp
pointer/: chap1.cpp  chap2.cpp
struct/: ex1.cpp  ex2.cpp  ex3.cpp
